--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-Flask==1.1.1
+Flask==2.0.1
 Flask-Cors==3.0.10
-Flask-RESTful==0.3.8
-gunicorn==20.0.4
-requests==2.22.0
-scikit-learn==0.22.1
-pandas==1.0.1
-# pymongo==3.11.4
+gunicorn==20.1.0
+requests==2.25.1
+scikit-learn==0.24.2
+pandas==1.2.4
+pymongo==3.11.4
