--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
 Flask==2.0.1
 Flask-Cors==3.0.10
+Flask-RESTful==0.3.8
+Flask-PyMongo==2.3.0
 gunicorn==20.1.0
 requests==2.25.1
 scikit-learn==0.24.2
 pandas==1.2.4
 pymongo==3.11.4
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+Werkzeug==2.0.1
+aniso8601==8.1.0
+itsdangerous==2.0.1
+pymongo==2.7.1
+pytz==2019.3
+six==1.14.0
